--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@ Manas
   <section class="slideshow">
     <img id="slideshow-image" src="image1.jpg" alt="Slideshow" />
   </section>
-
+  <div class="slideshow-container">
+    <img src="image1.jpg" class="slide active" />
+    <img src="image2.jpg" class="slide" />
+    <img src="image3.jpg" class="slide" />
+  </div>
+  
   <section class="notifications">
     <h2>Recent Notifications</h2>
     <ul id="notification-list">
