--- a/home.html
+++ b/home.html
@@ -146,21 +146,21 @@
                 </div>
                 
                 <div class="faculty-card">
-                    <img src="faculty2.jpg" alt="Faculty Member" class="faculty-img">
+                    <img src="Faculty2.jpg" alt="Faculty Member" class="faculty-img">
                     <h3>Prof. Aparna Nayak</h3>
                     <p class="faculty-title">Professor, Finance</p>
                     <p class="faculty-bio">PhD from IIM Ahmedabad with specialization in Corporate Finance.</p>
                 </div>
                 
                 <div class="faculty-card">
-                    <img src="faculty3.jpg" alt="Faculty Member" class="faculty-img">
+                    <img src="Faculty3.jpg" alt="Faculty Member" class="faculty-img">
                     <h3>Asst. Prof. Sanghamitra Sahoo</h3>
                     <p class="faculty-title">Visiting Faculty, AI&ML</p>
                     <p class="faculty-bio">Current CEO of TechSolutions with 15 years consulting experience.</p>
                 </div>
 
                 <div class="faculty-card">
-                    <img src="faculty4.jpg" alt="Faculty Member" class="faculty-img">
+                    <img src="Faculty4.jpg" alt="Faculty Member" class="faculty-img">
                     <h3>Asst. Prof. Anita Parida</h3>
                     <p class="faculty-title">Visiting Faculty, IT</p>
                     <p class="faculty-bio">Current CIO of TechSolutions with 15 years consulting experience.</p>
